- fixed z-index variable on the stark theme

--- a/RockWeb/Themes/Stark/Styles/bootstrap.css
+++ b/RockWeb/Themes/Stark/Styles/bootstrap.css
@@ -7366,7 +7366,7 @@ button.close {
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1010;
+  z-index: 1060;
   display: none;
   max-width: 276px;
   padding: 1px;
